--- a/css/style.css
+++ b/css/style.css
@@ -494,6 +494,10 @@ body{
   line-height: 22px;
 }
 
+#myForm{
+    width: 100vw;
+    height: max-content;
+}
 
 #pdfContainer {
     display: flex;
